Fix issue with checks